[tool.poetry]
name = "dipdup-quipuswap"
version = "0.1.0"
description = ""
authors = ["xsfunc"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dipdup = "^4.2.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
mypy = "^0.931"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
